# myrpl-cli

./: .flake8  .gitignore  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  release.config.js
.github/workflows/: ci.yml  generic-branch-protection.yml  main-branch-protection.yml  python-app.yml  python-ci.yml  release.yml
myrpl_cli/: __init__.py  api.py  credential_manager.py  decompiler.py  errors.py  main.py  models.py  myrpl.py  myrpl_api.py
tests/: api_test.py
tests/fixtures/: decompilation_submission_response.json
