[tool.poetry]
name = "myrpl-cli"
version = "0.2.0"
description = "A script to fetch and save course activities from myrpl.ar"
authors = ["tcorzo"]

[tool.poetry.scripts]
myrpl = "myrpl_cli.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.25.1"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
tqdm = "^4.66.4"
requests-toolbelt = "^1.0.0"
keyring = "^25.2.1"
keyrings-cryptfile = "^1.3.9"
toml = "^0.10.2"
pydantic = "^2.7.4"

# This requires python3-dev to be installed
pycdc = { git = "https://github.com/percevalw/pycdc.git", branch = "pypi" }

# myrpl test dependencies:
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry>=0.12", "cmake>=3.18"]
build-backend = "poetry.core.masonry.api"
