[tool.poetry]
name = "myrpl-cli"
version = "0.1.0"
description = "A script to fetch and save course activities from myrpl.ar"
authors = ["tcorzo"]
readme = "README.md"

[tool.poetry.scripts]
myrpl = "myrpl_cli.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.25.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
tqdm = "^4.66.5"
requests-toolbelt = "^1.0.0"
keyring = "^25.4.1"
keyrings-cryptfile = "^1.3.9"
toml = "^0.10.2"
pydantic = "^2.9.2"

# myrpl test dependencies
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.7.4,<0.9.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
	".git",
	"__pycache__",
	".venv",
	"venv",
	".eggs",
	"*.egg",
	"build",
	"dist",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.typos.files]
extend-exclude = ["tests/*"]

[tool.typos.default]
extend-ignore-re = [
	# Line ignore with trailing "# spellchecker =disable-line"
	"(?Rm)^.*#\\s*spellchecker =disable-line$",
	# Line block with "# spellchecker =<on|off>"
	"(?s)(#|//)\\s*spellchecker =off.*?\\n\\s*(#|//)\\s*spellchecker =on",
]

# [tool.markdownlint]
# # default to true for all rules
# default = true

# [tool.markdownlint.MD007]
# # MD007/unordered-list-indent
# indent = 4

# # MD033/no-inline-html
# MD033 = false

# # MD041/first-line-h1
# MD041 = false

# # MD013/line-length
# MD013 = false

# # MD024/no-duplicate-heading
# [tool.markdownlint.MD024]
# # Allow when nested under different parents e.g. CHANGELOG.md
# siblings_only = true

[tool.semantic_release]
version_variable = [
    "myrpl_cli/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build --no-interaction"
